# anchor-compressed-nft

./: .gitignore  Anchor.toml  package-lock.json  package.json
client/scripts/: anchor.ts  transferNFT.ts  verboseCreateAndMint.ts
client/utils/: anchor_compressed_nft.ts
frontend/: next.config.js  package.json
frontend/ReadApi/: WrapperConnection.ts  types.ts
frontend/components/: BurnCnft.tsx  Button.tsx  DisplayCnft.tsx  MintCnft.tsx  NavigationBar.tsx  TransferCnft.tsx
frontend/idl/: anchor_compressed_nft.ts
frontend/pages/: _app.tsx  index.tsx
frontend/pages/api/: mintCnft.ts
frontend/pages/cnftMint.ts/: index.tsx
frontend/styles/: globals.css
frontend/utils/: setup.ts  utils.ts
programs/anchor-compressed-nft/: Cargo.toml
programs/anchor-compressed-nft/src/: lib.rs
tests/: anchor-compressed-nft.ts
utils/: utils.ts
