[package]
name = "anchor-compressed-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_compressed_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.26.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.26.0",features = ["metadata"]}
mpl-token-metadata = { version = "=1.9.0", features = ["no-entrypoint"] }
mpl-bubblegum = { version = "0.7.0", features=["cpi"] }
spl-account-compression = { version="0.1.8", features = ["cpi"] }
solana-program = "=1.14.13"
winnow="=0.4.1"
toml_datetime="=0.6.1"
